crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__for_loop_whose_body_always_returns_leaves_a_dead_step_block.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn head(object, int) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-4:16
    v2 = const.int 0  ; int
    ; stmt s1 @5:5-7:6
    v3 = const.int 0  ; int
    jump bb1
  bb1:
    v4 = phi [bb0: v3, bb3: v3]  ; int
    v5 = lt v4, v1  ; bool
    branch v5 -> bb2 (e0), bb4 (e1)
  bb2:
    ; stmt s2 @5:36-7:6
    ; stmt s3 @6:7-6:17
    release v0
    return v4
  bb3:
    jump bb1
  bb4:
    ; stmt s4 @8:5-8:15
    v6 = const.int 1  ; int
    v7 = neg v6  ; int
    release v0
    return v7
}
