crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__match_arms_join_in_a_phi_at_one_merge_block.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn name(object, int) -> string {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; int
    ; stmt s0 @4:5-7:7
    v2 = const.int 1  ; int
    v3 = eq v1, v2  ; bool
    branch v3 -> bb1 (e0), bb4 (e1)
  bb1:
    v6 = const.str "low"  ; string
    jump bb3
  bb2:
    v7 = const.str "high"  ; string
    jump bb3
  bb3:
    v8 = phi [bb1: v6, bb2: v7]  ; string
    release v0
    return v8
  bb4:
    v4 = const.int 2  ; int
    v5 = eq v1, v4  ; bool
    branch v5 -> bb1 (e2), bb5 (e3)
  bb5:
    jump bb2
}
