crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__multi_base_integer_literals_cook_to_the_same_value.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:21
    v1 = const.int 31  ; int
    ; stmt s1 @5:5-5:21
    v2 = const.int 15  ; int
    ; stmt s2 @6:5-6:22
    v3 = const.int 5  ; int
    ; stmt s3 @7:5-7:31
    v4 = add v1, v2  ; int
    v5 = add v4, v3  ; int
    release v0
    return v5
}
