crates/mwl-ir/src/lower/snapshots/mwl_ir__lower__tests__numeric_escapes_cook_to_their_byte_or_codepoint.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:37
    v1 = const.str "A*😀"  ; string
    release v1
    release v0
    return
}
